--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -40,6 +40,9 @@
                 <li>
                     <a asp-controller="Customer" asp-action="CustomerList"><i class="fa-solid fa-users mr-3"></i> Müşteriler</a>
                 </li>
+                <li>
+                    <a asp-controller="Download" asp-action="Index"><i class="fa-solid fa-file mr-3"></i> İndirmeler</a>
+                </li>
             </ul>
         </nav>
 
